<resources>
    <string name="app_name">SmoiApp001</string>
    <string name="edit_transaction_description">Transaction Description..</string>
    <string name="edit_transaction_cost">Transaction Cost..</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="add_transaction_activity_name">Add Transaction</string>
    <string name="update_transaction_activity_name">Update Transaction</string>
    <string name="default_date">11/11/1111</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_cost_label">By day:</string>
    <string name="delete_button">Delete</string>
    <string name="monthly_cost_label">By month:</string>
    <string name="show_all_label">Show All</string>
    <string name="last_7_days_label">Last 7 Days</string>
    <string name="last_30_days_label">Last 30 Days</string>
    <string name="all_time_label">All Time</string>
    <string name="syncronize_firebase_string">Syncronize Firebase</string>

    <string name="add_item_reminder_notification_title">Let\'s add your item!</string>
    <string name="add_item_reminder_notification_body">Touch to open the application</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="cost_per_day">Cost per Day</string>
    <string name="default_date_string">DD/MM/YYYY</string>

    <string-array name="filter_array">
        <item>Top Count</item>
        <item>Top Cost</item>
    </string-array>
</resources>
