<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/layout_horizontal_margin"
    android:paddingVertical="@dimen/layout_vertical_margin"
    android:background="#e6e6e6">

    <Spinner
        android:id="@+id/filter_spinner"
        style="@android:style/Widget.Material.Light.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_gravity="end" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Large_text_size"
                android:text="@string/last_7_days_label"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_weekly_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Large_text_size"
                android:text="@string/last_30_days_label"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_monthly_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Large_text_size"
                android:text="@string/all_time_label"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_all_time_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>