<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.MainActivity">

        <RelativeLayout
            android:id="@+id/overallSectionLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_horizontal_margin">

            <Button
                android:id="@+id/dateSelectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
                android:layout_marginVertical="@dimen/layout_vertical_margin"
                android:layout_alignParentStart="true"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/default_date_string" />

            <LinearLayout
                android:id="@+id/costLabelLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
                android:layout_marginVertical="@dimen/layout_vertical_margin"
                android:layout_toLeftOf="@+id/costLayout">

                <TextView
                    android:id="@+id/dailyCostLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_horizontal_margin"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/today_cost_label" />

                <TextView
                    android:id="@+id/monthlyCostLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_horizontal_margin"
                    android:layout_marginTop="@dimen/layout_vertical_margin"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/monthly_cost_label" />

                <TextView
                    android:id="@+id/avgCostLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_horizontal_margin"
                    android:layout_marginTop="@dimen/layout_vertical_margin"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/cost_per_day" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/costLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/layout_horizontal_margin"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/dailyCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/Large_text_size"/>

                <TextView
                    android:id="@+id/monthlyCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/Large_text_size"/>

                <TextView
                    android:id="@+id/averageCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/Large_text_size" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/showAllCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateSelectionButton"
                android:text="@string/show_all_label" />

        </RelativeLayout>

        <!-- RecyclerView that is responsible for holding a list of Transaction Entry data -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactionRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="80dp" />

        <!-- Floating action button that launches ManageTransactionActivity when clicked -->

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        app:srcCompat="@android:drawable/ic_input_add" />
</FrameLayout>


