<?xml version="1.0" encoding="utf-8"?><!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to adtaskEntrytask description, and buttons to select a priority
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manage_transaction_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- EditText for getTransactionEntry description input -->
    <!--<EditText
        android:id="@+id/et_transaction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_transaction_description"
        android:paddingBottom="@dimen/activity_horizontal_margin" />-->

    <AutoCompleteTextView
        android:id="@+id/actv_transaction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_transaction_description"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:completionThreshold="1"
        />

    <!-- EditText for getTransactionEntry cost input -->
    <EditText
        android:id="@+id/et_transaction_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="numberDecimal"
        android:hint="@string/edit_transaction_cost"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <!-- RadioGroup for visible selection of a type of cost -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:background="@color/colorRed"
            android:text="Expense"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:text="Income"
            android:theme="@style/WhiteRadioButton" />

    </RadioGroup>

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/tv_transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textColor="@android:color/primary_text_light" />

    <!-- Add/Update button -->
    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
        android:layout_marginVertical="@dimen/layout_vertical_margin"
        android:background="@color/colorPrimary"
        android:text="@string/add_button"
        android:textColor="@android:color/primary_text_dark" />

    <!-- Delete button -->
    <Button
        android:id="@+id/deleteButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
        android:layout_marginVertical="@dimen/layout_vertical_margin"
        android:background="@color/colorPrimary"
        android:text="@string/delete_button"
        android:textColor="@android:color/primary_text_dark" />

</LinearLayout>